[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 205.0
margin_top = 14.0
margin_right = 355.0
margin_bottom = 78.0
toggle_mode = true
text = "lista 1"

[node name="lista" type="Label" parent="."]
margin_left = 223.0
margin_top = 92.0
margin_right = 355.0
margin_bottom = 170.0
text = "lista:"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 402.0
margin_top = 91.0
margin_right = 547.0
margin_bottom = 155.0

[node name="button 2" type="Button" parent="."]
margin_left = 398.0
margin_top = 16.0
margin_right = 545.0
margin_bottom = 82.0
text = "lista 2"

[node name="Label" type="Label" parent="."]
margin_left = 408.0
margin_top = 170.0
margin_right = 542.0
margin_bottom = 231.0
text = "lista 2:"

[node name="Button3" type="Button" parent="."]
margin_left = 599.0
margin_top = 14.0
margin_right = 742.0
margin_bottom = 82.0
text = "lista 3"

[node name="Label2" type="Label" parent="."]
margin_left = 596.0
margin_top = 88.0
margin_right = 739.0
margin_bottom = 144.0
text = "lista 3: "

[node name="Button4" type="Button" parent="."]
margin_left = 791.0
margin_top = 18.0
margin_right = 962.0
margin_bottom = 84.0
text = "lista 4"

[node name="Label3" type="Label" parent="."]
margin_left = 800.0
margin_top = 166.0
margin_right = 966.0
margin_bottom = 232.0
text = "lista 4:"

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 791.0
margin_top = 93.0
margin_right = 967.0
margin_bottom = 157.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="button 2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
